--- a/src/main/resources/static/css/rooms.css
+++ b/src/main/resources/static/css/rooms.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.3)), url(img/1.webp);
+    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/1.webp);
     -webkit-background-size: cover;
     background-size:cover;
     background-attachment:fixed;
