--- a/src/main/resources/templates/LogIn.html
+++ b/src/main/resources/templates/LogIn.html
@@ -2,8 +2,8 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Room</title>
-    <link rel="stylesheet" href="../static/css/rooms.css"/>
+    <title>LogIn</title>
+    <link rel="stylesheet" href="css/rooms.css"/>
 </head>
 <body>
     <div class = "form">
