--- a/src/main/resources/static/css/rooms.css
+++ b/src/main/resources/static/css/rooms.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/1.webp);
+    background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.3)), url(/images/1.jpg);
     -webkit-background-size: cover;
     background-size:cover;
     background-attachment:fixed;
@@ -20,6 +20,11 @@ body {
     font-size: 30px;
     text-transform: uppercase;
 }
+#room {
+    margin: 30px 100px;
+    padding: 0;
+    color: #0fc3f5;
+}
 .input-form {
     margin: 15px 40px;
     text-align: center;
@@ -37,7 +42,7 @@ body {
 .input-form textarea[type = "text"]:focus, .input-form input[type = "password"]:focus {
     border: 1px solid #0fc3f5
 }
-.input-form input[type="submit"] {
+.input-form input[type="button"] {
     margin-top: 20px;
     color: #fff;
     font-weight:bold;
@@ -46,7 +51,7 @@ body {
     background: #0fc3f5;
     transition: .3;
 }
-.input-form input[type="submit"]:hover {
+.input-form input[type="button"]:hover {
     background: #4442db;
 }
 
