--- a/src/main/resources/templates/LogIn.html
+++ b/src/main/resources/templates/LogIn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>LogIn</title>
-    <link rel="stylesheet" href="css/rooms.css"/>
+    <link rel="stylesheet" href="../static/css/rooms.css"/>
 </head>
 <body>
     <div class = "form">
