--- a/src/main/resources/templates/LogIn.html
+++ b/src/main/resources/templates/LogIn.html
@@ -41,7 +41,7 @@
                             if(data === false) {
                                 document.getElementById('textError').style.display='';
                             } else {
-                                let logInUrl = '../SeaWar/' + [[${roomNumber}]] + '?username=' + document.getElementById('username').value;
+                                let logInUrl ='../SeaWar/' + [[${roomNumber}]] + '/' + document.getElementById("username").value+ '/field';
                                 window.location.href = logInUrl;
                             }
                       })
